APDS-82 saved list button fix, is_a editing panel fix, role group edit panel fix, validation fix, review fix header alignment fix, other small tweaks

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -196,13 +196,7 @@ h1 {
 .add-buttons:hover {
     color: #000 ;
 }
-.saved-list-buttons {
-    background-color: transparent ;
-    padding: 0px 1px ;
-    color: #424242 ;
-    font-size: 13px ;
-    line-height: 1 ;
-}
+
 .saved-list-buttons:hover {
     color: #009cd7 ;
 }
