--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -8,7 +8,7 @@
      float: left;
      display: inline;
      margin: 0;
-     padding: 13px 0 0 0;
+     padding: 19px 0 0 0;
      list-style: none;
  }
  ul.dashboard-link-list li {
@@ -28,6 +28,7 @@
      background: transparent;
      color: #fff;
  }
+.btn-round-sm.header-settings {padding-top:10px;}
  .navbar .dashboard-link-list li .btn-link {
      color: #4fc3f7;
  }
