--- a/app/styles/validation.scss
+++ b/app/styles/validation.scss
@@ -1,8 +1,6 @@
    .table > tbody > tr > td,
     .table > tbody > tr > th {
       padding: 0px;
-      line-height: 1.846;
-      vertical-align: top;
       border-top: 1px solid #F0F0F0;
     }
 
